internal/ast/testdata/tests/errors/contracts/bad_elif_body.rql
contract BadBody() -> void {
    if x {

    } elif y() {
        #
    }
}
